--- a/custom_components/localtuya/translations/en.json
+++ b/custom_components/localtuya/translations/en.json
@@ -70,14 +70,11 @@
                     "color_temp_max_kelvin": "Maximum Color Temperature in K",
                     "music_mode": "Music mode available",
                     "scene": "Scene",
-                    "fan_speed_control": "Fan Speed Control dps",
-                    "fan_oscillating_control": "Fan Oscillating Control dps",
-                    "fan_speed_min": "minimum fan speed integer",
-                    "fan_speed_max": "maximum fan speed integer",
-                    "fan_speed_ordered_list": "Fan speed modes list (overrides speed min/max)",
-                    "fan_direction":"fan direction dps",
-                    "fan_direction_forward": "forward dps string",
-                    "fan_direction_reverse": "reverse dps string"
+                    "fan_speed_control": "Fan Speed Control",
+                    "fan_oscillating_control": "Fan Oscillating Control",
+                    "fan_speed_low": "Fan Low Speed Setting",
+                    "fan_speed_medium": "Fan Medium Speed Setting",
+                    "fan_speed_high": "Fan High Speed Setting"
                 }
             }
         }
@@ -125,14 +122,11 @@
                     "color_temp_max_kelvin": "Maximum Color Temperature in K",
                     "music_mode": "Music mode available",
                     "scene": "Scene",
-                    "fan_speed_control": "Fan Speed Control dps",
-                    "fan_oscillating_control": "Fan Oscillating Control dps",
-                    "fan_speed_min": "minimum fan speed integer",
-                    "fan_speed_max": "maximum fan speed integer",
-                    "fan_speed_ordered_list": "Fan speed modes list (overrides speed min/max)",
-                    "fan_direction":"fan direction dps",
-                    "fan_direction_forward": "forward dps string",
-                    "fan_direction_reverse": "reverse dps string"
+                    "fan_speed_control": "Fan Speed Control",
+                    "fan_oscillating_control": "Fan Oscillating Control",
+                    "fan_speed_low": "Fan Low Speed Setting",
+                    "fan_speed_medium": "Fan Medium Speed Setting",
+                    "fan_speed_high": "Fan High Speed Setting"
                 }
             },
             "yaml_import": {
